tests/cases/parser/misc/triple_colon_in_access_name.stderr
error: expected field name access or a method call
 --> $DIR/triple_colon_in_access_name.hash:3:5
2 |   
3 |   a.b.:c<int>();
  |       ^ 
  = help: expected a `identifier`
